Ajustando pequeno erro lógico

--- a/Atividade_Dia_4/dia_4.ipynb
+++ b/Atividade_Dia_4/dia_4.ipynb
@@ -2840,7 +2840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "c2e8b597",
    "metadata": {},
    "outputs": [],
@@ -2883,7 +2883,7 @@
     "            if x in usuario['item id']:\n",
     "                 filmes_cluster = filmes_cluster[filmes_cluster['item id'] != x]\n",
     "                 \n",
-    "        if len(filmes_cluster >= 5):\n",
+    "        if len(filmes_cluster) >= 5:\n",
     "            break\n",
     "\n",
     "    return filmes_cluster['item id'].head()\n",
