--- a/Atividade_Dia_1-Dia_3/dia_1_dia_3.ipynb
+++ b/Atividade_Dia_1-Dia_3/dia_1_dia_3.ipynb
@@ -2727,6 +2727,8 @@
    "source": [
     "# **Dia 3**\n",
     "\n",
+    "## **Introdução**\n",
+    "\n",
     "No desafio de hoje, criaremos o nosso próprio modelo de previsão!\n",
     "\n",
     "Criaremos um modelo que irá prever quanto os senadores vão utilizar do dinheiro público para os próximos 3 meses. Utilizaremos o Prophet, um modelo estatístico de previsão de séries temporais criada pela Meta para previsão de séries temporais baseado em um modelo aditivo, no qual tendências não lineares são ajustadas com sazonalidade anual, semanal e diária, além de efeitos de feriados. Ele funciona melhor com séries temporais que apresentam fortes efeitos sazonais e dados históricos de várias temporadas. O Prophet é robusto a dados faltantes e mudanças na tendência, e geralmente lida bem com valores discrepantes.\n",
@@ -2780,6 +2782,8 @@
    "id": "3753074f",
    "metadata": {},
    "source": [
+    "## **Visualização Gastos Anual**\n",
+    "\n",
     "Antes de aplicarmos nosso modelo, faremos uma breve visualização de como foi o comportamento dos gastos ao longo de cada ano, entre 2018 e 2022"
    ]
   },
@@ -2976,6 +2980,8 @@
    "id": "23644bf3",
    "metadata": {},
    "source": [
+    "## **Pré-Processamento, Modelo e Testes**\n",
+    "\n",
     "Com isso estamos prontos para criar nosso primeiro modelo.\n",
     "\n",
     "Faremos uma separação entre treino e teste, com treino estando entre os anos de 2018 e 2021, enquanto o teste será para o ano de 2022. Além do mais, para esse primeiros testes, faremos uma previsão de 365 dias ao invés de 90."
@@ -3197,6 +3203,8 @@
    "id": "d5b16c7d",
    "metadata": {},
    "source": [
+    "## **Melhorando Modelo**\n",
+    "\n",
     "Queremos minimizar o erro cometido. Como temos dados que ultrapassam 100 mil reais em valor gasto, seria bom um **RMSE** menor que 10 mil reais. Já para o **MAPE**, modelos que ultrapassam 30% já são considerados ruins.\n",
     "\n",
     "Queremos então uma diminuição, para isso faremos alguns tratamentos nos dados. Faremos então a retirada dos outliers que apareceram no gráfico acima, além de que, muito dos problemas se dão também ao fato dos dados estarem em uma escala muito grande, aplicaremos o ***log(x)***, já que não possuímos valores 0, para diminuir a escala e modelo se adaptar melhor aos dados."
@@ -3512,6 +3520,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c7bd79cd",
+   "metadata": {},
+   "source": [
+    "## **Previsão Final**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 59,
    "id": "64ff656d",
@@ -3681,15 +3697,19 @@
    "id": "e7ae893c",
    "metadata": {},
    "source": [
-    "Sendo este o nosso resultado, com uma tendência a aumentar ao longo dos dias com várias quedas sazonalmente.\n",
+    "## **Conclusão**\n",
     "\n",
-    "Você pode utilizar esse modelo para tentar prever quais serão os gastos nesses dias, mas lembre-se que estará cometendo um erro médio de até 23,7 mil reais, com um erro absoluto médio de até 43%."
+    "Através da aplicação do algoritmo Prophet, conseguimos converter o histórico de gastos do CEAPS em uma projeção para os primeiros 90 dias de 2023. Sendo este o nosso resultado, com uma tendência a aumentar ao longo dos dias com várias quedas sazonalmente.\n",
+    "\n",
+    "Você pode utilizar esse modelo para tentar prever quais serão os gastos nesses dias, mas lembre-se que estará cometendo um erro médio de até 23,7 mil reais, com um erro absoluto médio de até 43%. \n",
+    "\n",
+    "Esta análise permite que a sociedade civil e órgãos de controle antecipem o volume de gastos esperados. Valores que fujam drasticamente desta previsão podem ser alvos prioritários para auditorias detalhadas, cumprindo o objetivo."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
